--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.mail.username=marcelotorresyalta@gmail.com
 spring.mail.password=marceko14@
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+gemini.api.key=AIzaSyAxUT30Kk2IPKBzzZ99Z2SSilAmzgKZoAw
