--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 gemini.api.key=AIzaSyAxUT30Kk2IPKBzzZ99Z2SSilAmzgKZoAw
+
+server.port=${PORT:8080}
