--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 spring.application.name=emails
 
 
+# configuraciòn para la conexiòn a la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/systemEmail
+spring.datasource.username=root
+spring.datasource.password=Master12@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 # configuraciòn de correo
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
