--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=marcelotorresyalta@gmail.com
-spring.mail.password=marceko14@
+spring.mail.password=btxvdakvayavogfw 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
