--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=emails
 
-# Database
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+# configuraciòn para la conexiòn a la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/systemEmail
+spring.datasource.username=root
+spring.datasource.password=Master12@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate
@@ -11,16 +12,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Email
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH}
-spring.mail.properties.mail.smtp.ssl.trust=${SPRING_MAIL_SSL_TRUST}
+# configuraciòn de correo
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=marcelotorresyalta@gmail.com
+spring.mail.password=btxvdakvayavogfw 
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
-# Gemini API
-gemini.api.key=${GEMINI_API_KEY}
+gemini.api.key=AIzaSyA86N_fnsrFU-UY3X7EfZi5gSWnt8P4e3E
 
-# Render usa PORT automáticamente
 server.port=${PORT:8080}
